--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="./public/Favicon.png" type="image/png">
     <title>Github Search</title>
   </head>
   <body>
