--- a/index.html
+++ b/index.html
@@ -6,13 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shortcut icon" href="./public/Favicon.png" type="image/png">
+
+    <!-- Basic SEO Meta tags -->
+    <title>Github Search</title>
+    <meta name="description" content="Site para pesquisar um perfil do Github e visualisar seus respositórios.">
+    <meta name="author" content="Wesley Alves Rolim">
+    <meta name="creator" content="Wesley Alves Rolim DEV">
+    <meta name="copyright" content="Wesley Alves Rolim">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="content-language" content="pt-br">
+    <link rel="canonical" href="https://github-search-wesley.vercel.app">
+
+    <!-- Open graph -->
+    <meta property="og:site_name" content="Github Search">
+    <meta property="og:title" content="Github Search | Home">
+    <meta property="og:description" content="Site para pesquisar um perfil do Github e visualisar seus respositórios.">
+    <meta property="og:url" content="https://github-search-wesley.vercel.app">
+    <meta property="og:image" content="./public/Favicon.png">
+    <meta property="og:locale" content="pt-br">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter -->
+    <meta name="twitter:title" content="Github Search | Home">
+    <meta name="twitter:description" content="Site para pesquisar um perfil do Github e visualisar seus respositórios.">
+    <meta name="twitter:image" content="./public/Favicon.png">
+    <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
-    <link rel="shortcut icon" href="./public/Favicon.png" type="image/png">
-    <title>Github Search</title>
-  </head>
+      />
+    </head>
   <body>
     <div id="root"></div>
     <script type="module" src="./src/main.jsx"></script>
