--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <meta property="og:title" content="Github Search | Home">
     <meta property="og:description" content="Site para pesquisar um perfil do Github e visualisar seus respositórios.">
     <meta property="og:url" content="https://github-search-wesley.vercel.app">
-    <meta property="og:image" content="./public/Favicon.png">
+    <meta property="og:image" content="./Favicon.png">
     <meta property="og:locale" content="pt-br">
     <meta property="og:type" content="website">
 
     <!-- Twitter -->
     <meta name="twitter:title" content="Github Search | Home">
     <meta name="twitter:description" content="Site para pesquisar um perfil do Github e visualisar seus respositórios.">
-    <meta name="twitter:image" content="./public/Favicon.png">
+    <meta name="twitter:image" content="./Favicon.png">
     <!-- Fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
